# mist

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json
.cargo/: config.toml
.github/workflows/: deploy.yml
src/: config.rs  log.rs  main.rs
src/assets/: registries.json
src/lib/docs/: data.ts
src/lib/docs/pages/: config.md  intro.md  setup.md
src/net/: codec.rs  mod.rs  packet.rs
src/net/packets/: mod.rs
src/net/packets/clientbound/: chunk_data_with_light.rs  disconnect.rs  encryption_request.rs  finish_configuration.rs  game_event.rs  keep_alive.rs  known_packs.rs  login_play.rs  login_success.rs  mod.rs  player_chat_message.rs  player_info_remove.rs  player_info_update.rs  plugin_message.rs  pong.rs  registry_data.rs  regristry_data.rs  set_center_chunk.rs  status_response.rs  sync_player_position.rs
src/net/packets/serverbound/: chat_message.rs  confirm_teleportation.rs  encryption_response.rs  handshake.rs  known_packs.rs  login_acknowledged.rs  login_start.rs  mod.rs  player_action.rs  player_input.rs  set_player_position_and_rotation.rs  set_player_rotation.rs  use_item_on.rs
src/routes/: +page.svelte  layout.css
src/routes/demo/: +page.svelte
src/routes/docs/[...slug]/: +page.svelte  +page.ts  docs.css
src/server/: auth.rs  conn.rs  encryption.rs  listener.rs  mod.rs  run.rs  save.rs  tick.rs
src/server/state/: configuration.rs  login.rs  play.rs  status.rs
src/types/: blocks.rs  mod.rs  player.rs
src/world/: chunks.rs  mod.rs  worldgen.rs
