[package]
name = "mist"
version = "0.1.0"
edition = "2024"

[dependencies]
toml = "0.9.8"
serde = { version = "1.0.228", features = ["derive"] }
fancy-log = "0.1.0"
once_cell = "1.21.3"
tokio = { version = "1", features = ["full"] }
tokio-macros = "2.5.0"
anyhow = "1.0.100"
rsa = { version = "0.9.8" }
rand = "0.8"
