[package]
name = "mist"
version = "0.1.0"
edition = "2024"

[dependencies]
toml = "0.9.8"
serde = { version = "1.0.228", features = ["derive"] }
fancy-log = "0.1.0"
once_cell = "1.21.3"
tokio = { version = "1", features = ["full"] }
tokio-macros = "2.5.0"
anyhow = "1.0.100"
rsa = "0.9.9"
rand = "0.8"
sha1 = "0.10.6"
num-bigint = "0.4.6"
reqwest = { version = "0.12.28", features = ["json", "blocking"] }
serde_json = "1.0.148"
base64 = "0.22.1"
aes = "0.8.4"
cfb8 = "0.8.1"
hex = "0.4"
craftflow-nbt = "2.1.0"
chrono = "0.4.42"
postcard = { version = "1.0.2", features = ["alloc"] }
flate2 = "1.1.5"
futures = "0.3.31"
lazy_static = "1.5.0"
byteorder = "1.5.0"
console-subscriber = "0.5.0"
